@@ -1,6 +1,7 @@
 package forge.game.ability.effects;
 
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Stream;
 import java.util.stream.Collectors;
 
@@ -10,8 +11,6 @@ import forge.card.GamePieceType;
 import forge.item.PaperCardPredicates;
 import forge.util.*;
 import org.apache.commons.lang3.StringUtils;
-
-import com.google.common.collect.ImmutableList;
 
 import forge.StaticData;
 import forge.card.CardRulesPredicates;
@@ -44,6 +43,13 @@ import forge.game.zone.ZoneType;
 import forge.item.PaperCard;
 
 public class PlayEffect extends SpellAbilityEffect {
+
+    @Override
+    public boolean movesCardToOrFromLibrary(final SpellAbility sa) {
+        // cards are played from hand unless ValidZone says otherwise
+        return zoneParamIsLibrary(sa, "ValidZone");
+    }
+
     @Override
     protected String getStackDescription(final SpellAbility sa) {
         final StringBuilder sb = new StringBuilder();
@@ -104,7 +110,7 @@ public class PlayEffect extends SpellAbilityEffect {
         CardCollectionView showCards = new CardCollection();
 
         if (sa.hasParam("Valid")) {
-            List<ZoneType> zones = sa.hasParam("ValidZone") ? ZoneType.listValueOf(sa.getParam("ValidZone")) : ImmutableList.of(ZoneType.Hand);
+            List<ZoneType> zones = sa.hasParam("ValidZone") ? ZoneType.listValueOf(sa.getParam("ValidZone")) : List.of(ZoneType.Hand);
             tgtCards = new CardCollection(AbilityUtils.filterListByType(game.getCardsIn(zones), sa.getParam("Valid"), sa));
             if (sa.hasParam("ShowCards")) {
                 showCards = AbilityUtils.filterListByType(game.getCardsIn(zones), sa.getParam("ShowCards"), sa);
@@ -118,9 +124,11 @@ public class PlayEffect extends SpellAbilityEffect {
                         .map(name -> name.replace(";", ","))
                         .map(cardDb::getUniqueByName);
             } else if (valid.equalsIgnoreCase("sorcery")) {
+                StaticData.instance().ensureAllCardsLoaded();
                 cards = cardDb.streamUniqueCards()
                         .filter(PaperCardPredicates.fromRules(CardRulesPredicates.IS_SORCERY));
             } else if (valid.equalsIgnoreCase("instant")) {
+                StaticData.instance().ensureAllCardsLoaded();
                 cards = cardDb.streamUniqueCards()
                         .filter(PaperCardPredicates.fromRules(CardRulesPredicates.IS_INSTANT));
             } else {
@@ -184,14 +192,15 @@ public class PlayEffect extends SpellAbilityEffect {
             return;
         }
 
+        Predicate<SpellAbility> validSA;
         if (sa.hasParam("ValidSA")) {
-            final String valid[] = sa.getParam("ValidSA").split(",");
-            final List<Card> invalid = tgtCards.stream().filter(c -> !IterableUtil.any(AbilityUtils.getBasicSpellsFromPlayEffect(c, controller), SpellAbilityPredicates.isValid(valid, controller, source, sa))).collect(Collectors.toList());
-            if (!invalid.isEmpty())
-                tgtCards.removeAll(invalid);
+            validSA = SpellAbilityPredicates.isValid(sa.getParam("ValidSA").split(","), controller, source, sa);
+            tgtCards.removeIf(c -> AbilityUtils.getSpellsFromPlayEffect(c, controller, CardStateName.Original, false, validSA).isEmpty());
             if (tgtCards.isEmpty()) {
                 return;
             }
+        } else {
+            validSA = null;
         }
 
         int amount = 1;
@@ -285,11 +294,7 @@ public class PlayEffect extends SpellAbilityEffect {
                 state = CardStateName.Backside;
             }
 
-            List<SpellAbility> sas = AbilityUtils.getSpellsFromPlayEffect(tgtCard, controller, state, !altCost);
-            if (sa.hasParam("ValidSA")) {
-                final String valid[] = sa.getParam("ValidSA").split(",");
-                sas.removeIf(sp -> !sp.isValid(valid, controller , source, sa));
-            }
+            List<SpellAbility> sas = AbilityUtils.getSpellsFromPlayEffect(tgtCard, controller, state, !altCost, validSA);
 
             if (altCostManaCost) {
                 sas.removeIf(sp -> sp.getPayCosts().getCostMana().getMana().isNoCost());
