@@ -29,6 +29,7 @@ import forge.game.GameLogEntryType;
 import forge.game.ability.AbilityFactory;
 import forge.game.ability.AbilityKey;
 import forge.game.ability.AbilityUtils;
+import forge.game.ability.IllegalAbilityException;
 import forge.game.cost.*;
 import forge.game.event.GameEventAddLog;
 import forge.game.event.GameEventCardForetold;
@@ -126,94 +127,33 @@ public class CardFactoryUtil {
         return AbilityFactory.getAbility(unlockStr, cardState);
     }
 
-    /**
-     * <p>
-     * abilityMorphUp.
-     * </p>
-     *
-     * @return a {@link forge.game.spellability.AbilityActivated} object.
-     */
-    public static SpellAbility abilityMorphUp(final CardState cardState, final String costStr, final boolean mega, final boolean intrinsic) {
-        Cost cost = new Cost(costStr, true);
-        StringBuilder sbCost = new StringBuilder(mega ? "Megamorph" : "Morph");
-        sbCost.append(" ");
+    public static SpellAbility abilityTurnFaceUp(final CardState cardState, final Cost cost, String key, String desc, String reminderDesc) {
+        StringBuilder sbCost = new StringBuilder();
         if (!cost.isOnlyManaCost()) {
-            sbCost.append("— ");
+            sbCost.append(" — ");
         }
-        sbCost.append(cost.toString());
-
-        StringBuilder sb = new StringBuilder();
-        sb.append("ST$ SetState | Cost$ ").append(costStr).append(" | CostDesc$ ").append(sbCost);
-        sb.append(" | MorphUp$ True | Secondary$ True | IsPresent$ Card.Self+faceDown");
-        if (mega) {
-            sb.append(" | Mega$ True");
-        }
-
-        sb.append(" | Mode$ TurnFaceUp | SpellDescription$ (Turn this face up any time for its morph cost.)");
-
-        final SpellAbility morphUp = AbilityFactory.getAbility(sb.toString(), cardState);
-
-        // if Cost has X in cost, need to check source for an SVar for this
-        if (cost.hasXInAnyCostPart() && cardState.hasSVar("X")) {
-            morphUp.setSVar("X", cardState.getSVar("X"));
-        }
-
-        final StringBuilder sbStack = new StringBuilder();
-        sbStack.append(cardState.getName()).append(" - turn this card face up.");
-        morphUp.setStackDescription(sbStack.toString());
-
-        morphUp.setIntrinsic(intrinsic);
-
-        return morphUp;
-    }
-    public static SpellAbility abilityDisguiseUp(final CardState cardState, final String costStr, final boolean intrinsic) {
-        Cost cost = new Cost(costStr, true);
-        StringBuilder sbCost =  new StringBuilder("Disguise");
-        sbCost.append(" ");
-        if (!cost.isOnlyManaCost()) {
-            sbCost.append("— ");
-        }
-        sbCost.append(cost.toString());
-
-        StringBuilder sb = new StringBuilder();
-        sb.append("ST$ SetState | Cost$ ").append(costStr).append(" | CostDesc$ ").append(sbCost);
-        sb.append(" | DisguiseUp$ True | Secondary$ True | IsPresent$ Card.Self+faceDown");
-        sb.append(" | Mode$ TurnFaceUp | SpellDescription$ (Turn this face up any time for its disguise cost.)");
-
-        final SpellAbility morphUp = AbilityFactory.getAbility(sb.toString(), cardState);
-
-        // if Cost has X in cost, need to check source for an SVar for this
-        if (cost.hasXInAnyCostPart() && cardState.hasSVar("X")) {
-            morphUp.setSVar("X", cardState.getSVar("X"));
-        }
-
-        final StringBuilder sbStack = new StringBuilder();
-        sbStack.append(cardState.getName()).append(" - turn this card face up.");
-        morphUp.setStackDescription(sbStack.toString());
-
-        morphUp.setIntrinsic(intrinsic);
-
-        return morphUp;
-    }
-
-    public static SpellAbility abilityTurnFaceUp(final CardState sourceCard, String key, String desc) {
-        final ManaCost manaCost = sourceCard.getManaCost();
-        String costDesc = manaCost.toString();
+        sbCost.append(cost);
 
         // Cost need to be set later
         StringBuilder sb = new StringBuilder();
-        sb.append("ST$ SetState | Cost$ 0 | ").append("PrecostDesc$ ").append(desc).append(" | CostDesc$ ").append(costDesc);
-        sb.append(" | ").append(key).append("$ True | Secondary$ True | Mode$ TurnFaceUp | SpellDescription$ (Turn this face up any time for its mana cost.)");
+        sb.append("ST$ SetState | Cost$ 0 | PrecostDesc$ ").append(desc).append(" | CostDesc$ ").append(sbCost);
+        sb.append(" | ").append(key).append("$ True | Secondary$ True | IsPresent$ Card.Self+faceDown | Mode$ TurnFaceUp | SpellDescription$ (Turn this face up any time for its ").append(reminderDesc).append(" cost.)");
 
-        final SpellAbility manifestUp = AbilityFactory.getAbility(sb.toString(), sourceCard);
-        manifestUp.setPayCosts(new Cost(manaCost, true));
-        manifestUp.rebuiltDescription();
+        final SpellAbility morphUp = AbilityFactory.getAbility(sb.toString(), cardState);
+
+        // if Cost has X in cost, need to check source for an SVar for this
+        if (cost.hasXInAnyCostPart() && cardState.hasSVar("X")) {
+            morphUp.setSVar("X", cardState.getSVar("X"));
+        }
+
+        morphUp.setPayCosts(cost);
+        morphUp.rebuiltDescription();
 
         final StringBuilder sbStack = new StringBuilder();
-        sbStack.append(sourceCard.getName()).append(" - turn this card face up.");
-        manifestUp.setStackDescription(sbStack.toString());
+        sbStack.append(cardState.getName()).append(" - turn this card face up.");
+        morphUp.setStackDescription(sbStack.toString());
 
-        return manifestUp;
+        return morphUp;
     }
 
     public static boolean handleHiddenAgenda(Player player, Card card, KeywordInterface ki) {
@@ -239,7 +179,7 @@ public class CardFactoryUtil {
         }
 
         card.turnFaceDown();
-        card.addMayLookAt(player.getGame().getNextTimestamp(), ImmutableList.of(player));
+        card.addMayLookAt(player.getGame().getNextTimestamp(), List.of(player));
         ki.addSpellAbility(abilityRevealHiddenAgenda(card));
         return true;
     }
@@ -392,8 +332,7 @@ public class CardFactoryUtil {
             // if something has all creature types, but some are excluded, the count might be messed up
 
             for (String creatureType : type.getCreatureTypes()) {
-                Integer count = map.get(creatureType);
-                map.put(creatureType, count == null ? 1 : count + 1);
+                map.merge(creatureType, 1, Integer::sum);
             }
         }
 
@@ -417,15 +356,14 @@ public class CardFactoryUtil {
      */
     public static Iterable<String> getMostProminentCreatureType(final CardCollectionView list) {
         if (list.isEmpty()) {
-            return ImmutableList.of();
+            return List.of();
         }
 
         final Map<String, Integer> map = Maps.newHashMap();
         for (final Card c : list) {
             // Remove Duplicated types
             for (String creatureType : c.getType().getCreatureTypes()) {
-                Integer count = map.get(creatureType);
-                map.put(creatureType, count == null ? 1 : count + 1);
+                map.merge(creatureType, 1, Integer::sum);
             }
         }
 
@@ -436,7 +374,7 @@ public class CardFactoryUtil {
             }
         }
         if (max == 0) {
-            return ImmutableList.of();
+            return List.of();
         }
         List<String> result = Lists.newArrayList();
         for (final Entry<String, Integer> entry : map.entrySet()) {
@@ -543,7 +481,7 @@ public class CardFactoryUtil {
                 Sentry.addBreadcrumb(bread);
 
                 // rethrow the exception with card Name for the user
-                throw new RuntimeException("crash in raw Ability, check card script of " + card.getName(), e);
+                throw new IllegalAbilityException("crash in raw Ability, check card script of " + card.getName(), e, card.getRules() != null && card.getRules().isCustom());
             }
         }
     }
@@ -602,52 +540,6 @@ public class CardFactoryUtil {
         re.setOverridingAbility(repAb);
 
         return re;
-    }
-
-    public static String getProtectionValid(final String kw, final boolean damage) {
-        String validSource = "";
-
-        if (kw.startsWith("Protection:")) {
-            final String[] kws = kw.split(":");
-            String characteristic = kws[1];
-            if (characteristic.startsWith("Player")) {
-                validSource = "ControlledBy " + characteristic;
-            } else {
-                if (damage && (characteristic.endsWith("White") || characteristic.endsWith("Blue")
-                    || characteristic.endsWith("Black") || characteristic.endsWith("Red")
-                    || characteristic.endsWith("Green") || characteristic.endsWith("Colorless")
-                    || characteristic.endsWith("MonoColor") || characteristic.endsWith("MultiColor")
-                    || characteristic.endsWith("EnemyColor"))) {
-                    characteristic += "Source";
-                }
-                return characteristic;
-            }
-        } else if (kw.startsWith("Protection from ")) {
-            String protectType = kw.substring("Protection from ".length());
-            if (protectType.equals("white")) {
-                validSource = "White" + (damage ? "Source" : "");
-            } else if (protectType.equals("blue")) {
-                validSource = "Blue" + (damage ? "Source" : "");
-            } else if (protectType.equals("black")) {
-                validSource = "Black" + (damage ? "Source" : "");
-            } else if (protectType.equals("red")) {
-                validSource = "Red" + (damage ? "Source" : "");
-            } else if (protectType.equals("green")) {
-                validSource = "Green" + (damage ? "Source" : "");
-            } else if (protectType.equals("colorless")) {
-                validSource = "Colorless" + (damage ? "Source" : "");
-            } else if (protectType.equals("each color")) {
-                validSource = "nonColorless" + (damage ? "Source" : "");
-            } else if (protectType.equals("everything")) {
-                return "";
-            } else {
-                throw new RuntimeException("unknown protection keyword: " + kw);
-            }
-        }
-        if (validSource.isEmpty()) {
-            return validSource;
-        }
-        return "Card." + validSource + ",Emblem." + validSource;
     }
 
     public static ReplacementEffect makeEtbCounter(final String kw, final CardState card, final boolean intrinsic) {
@@ -742,10 +634,19 @@ public class CardFactoryUtil {
                         + " | Secondary$ True | Static$ True | Blessing$ False | IsPresent$ Permanent.YouCtrl | PresentCompare$ GE10"
                         + " | TriggerDescription$ Ascend (" + inst.getReminderText() + ")";
 
-                final String effect = "DB$ Ascend | Defined$ You";
-
                 final Trigger trigger = TriggerHandler.parseTrigger(trig, card, intrinsic);
-                trigger.setOverridingAbility(AbilityFactory.getAbility(effect, card));
+                final SpellAbility ascend = new AbilityStatic(card, Cost.Zero, null) {
+                    @Override
+                    public void resolve() {
+                        final Player p = getActivatingPlayer();
+                        if (p != null && p.isInGame()) {
+                            p.setBlessing(true, getOriginalHost().getSetCode());
+                        }
+                    }
+                };
+                // as AbilityFactory would have done, so getOriginalHost resolves on a copied trait
+                ascend.setCardState(card.getCurrentState());
+                trigger.setOverridingAbility(ascend);
 
                 inst.addTrigger(trigger);
             }
@@ -1402,6 +1303,16 @@ public class CardFactoryUtil {
             for (final Trigger trigger : triggers) {
                 inst.addTrigger(trigger);
             }
+        } else if (keyword.equals("Increment")) {
+            final String trig = "Mode$ SpellCast | ValidActivatingPlayer$ You | TriggerZones$ Battlefield "
+                    + " | Secondary$ True | TriggerDescription$ Increment (" + inst.getReminderText() + ")";
+
+            final String effect = "DB$ PutCounter | CounterType$ P1P1 | CounterNum$ 1";
+
+            final Trigger parsedTrigger = TriggerHandler.parseTrigger(trig, card, intrinsic);
+            parsedTrigger.setOverridingAbility(AbilityFactory.getAbility(effect, card));
+
+            inst.addTrigger(parsedTrigger);
         } else if (keyword.equals("Ingest")) {
             final String trigStr = "Mode$ DamageDone | ValidSource$ Card.Self | ValidTarget$ Player | CombatDamage$ True"
                     + "| Secondary$ True | TriggerZones$ Battlefield | TriggerDescription$ Ingest ("
@@ -1538,8 +1449,7 @@ public class CardFactoryUtil {
         } else if (keyword.startsWith("Miracle")) {
             final String[] k = keyword.split(":");
             final String manacost = k[1];
-            final String abStrReveal = "DB$ Reveal | Defined$ You | RevealDefined$ Self"
-                    + " | MiracleCost$ " + manacost;
+            final String abStrReveal = "DB$ Reveal | Defined$ You | RevealDefined$ Self";
             String abStrPlay = "DB$ Play | Defined$ Self | Optional$ True | PlayCost$ " + manacost;
             if (k.length > 2) {
                 abStrPlay += " | PlayReduceCost$ " + k[2];
@@ -1877,6 +1787,30 @@ public class CardFactoryUtil {
             squadTrigger.setOverridingAbility(squadAbility);
             squadTrigger.setSVar("SquadAmount", "Count$OptionalKeywordAmount");
             inst.addTrigger(squadTrigger);
+        } else if (keyword.equals("Storied")) {
+            // Storied trigger only for Permanent, as with Ascend
+            if (card.isPermanent()) {
+                final String trig = "Mode$ Always | TriggerZones$ Battlefield"
+                        + " | Secondary$ True | Static$ True | EnduringStory$ False"
+                        + " | IsPresent$ Permanent.YouCtrl+Historic | PresentCompare$ GE3"
+                        + " | TriggerDescription$ Storied (" + inst.getReminderText() + ")";
+
+                final Trigger trigger = TriggerHandler.parseTrigger(trig, card, intrinsic);
+                final SpellAbility gainStory = new AbilityStatic(card, Cost.Zero, null) {
+                    @Override
+                    public void resolve() {
+                        final Player p = getActivatingPlayer();
+                        if (p != null && p.isInGame()) {
+                            p.setEnduringStory(true, getOriginalHost().getSetCode());
+                        }
+                    }
+                };
+                // as AbilityFactory would have done, so getOriginalHost resolves on a copied trait
+                gainStory.setCardState(card.getCurrentState());
+                trigger.setOverridingAbility(gainStory);
+
+                inst.addTrigger(trigger);
+            }
         } else if (keyword.equals("Storm")) {
             final String actualTrigger = "Mode$ SpellCast | ValidCard$ Card.Self | TriggerZones$ Stack | Secondary$ True"
                     + "| TriggerDescription$ Storm (" + inst.getReminderText() + ")";
@@ -2053,19 +1987,39 @@ public class CardFactoryUtil {
                 t.setOverridingAbility(sa);
                 inst.addTrigger(t);
             }
-        } else if (keyword.startsWith("Ward")) {
-            final String[] k = keyword.split(":");
-            final Cost cost = new Cost(k[1], false);
-            String costDesc = cost.toSimpleString();
-
+        } else if (keyword.startsWith("Ward") && inst instanceof Ward ward) {
             String strTrig = "Mode$ BecomesTarget | ValidSource$ SpellAbility.OppCtrl | ValidTarget$ Card.Self "
-                    + " | Secondary$ True | TriggerZones$ Battlefield | TriggerDescription$ Ward " + costDesc + " ("
+                    + " | Secondary$ True | TriggerZones$ Battlefield | TriggerDescription$ " + inst.getTitle() + " ("
                     + inst.getReminderText() + ")";
-            String effect = "DB$ Counter | Defined$ TriggeredSourceSA | UnlessCost$ " + k[1]
-                    + " | UnlessPayer$ TriggeredSourceSAController";
 
             final Trigger trigger = TriggerHandler.parseTrigger(strTrig, card, intrinsic);
-            trigger.setOverridingAbility(AbilityFactory.getAbility(effect, card));
+
+            if (ward.getCostString() != null) {
+                String effect = "DB$ Counter | Defined$ TriggeredSourceSA | UnlessCost$ " + ward.getCostString()
+                        + " | UnlessPayer$ TriggeredSourceSAController";
+                trigger.setOverridingAbility(AbilityFactory.getAbility(effect, card));
+            } else {
+                List<AbilitySub> subs = Lists.newArrayList();
+                for (Map.Entry<String, Cost> e : ward.getCosts().entrySet()) {
+                    StringBuilder costDesc = new StringBuilder();
+                    if (e.getValue().isOnlyManaCost()) {
+                        costDesc.append("Pay ");
+                    }
+                    costDesc.append(e.getValue().toSimpleString());
+
+                    String effect = "DB$ Counter | Defined$ TriggeredSourceSA | UnlessCost$ " + e.getKey()
+                        + " | UnlessPayer$ TriggeredSourceSAController | SpellDescription$ " + costDesc;
+                    subs.add((AbilitySub)AbilityFactory.getAbility(effect, card));
+                }
+
+                String effect = "DB$ GenericChoice | Defined$ TriggeredSourceSAController | AILogic$ PayUnlessCost";
+                SpellAbility saChoice = AbilityFactory.getAbility(effect, card);
+                saChoice.setAdditionalAbilityList("Choices", subs);
+                // in case no cost can be paid
+                saChoice.setAdditionalAbility("FallbackAbility", AbilityFactory.getAbility("DB$ Counter | Defined$ TriggeredSourceSA", card));
+
+                trigger.setOverridingAbility(saChoice);
+            }
 
             inst.addTrigger(trigger);
         } else if (keyword.equals("MayFlashSac")) {
@@ -2295,46 +2249,29 @@ public class CardFactoryUtil {
             final ReplacementEffect re = makeEtbCounter(sb.toString(), card, intrinsic);
 
             inst.addReplacement(re);
-        } else if (keyword.startsWith("Flashback")) {
-            StringBuilder sb = new StringBuilder();
-            sb.append("Event$ Moved | ValidCard$ Card.Self | Origin$ Stack | ExcludeDestination$ Exile ");
-            sb.append("| ValidStackSa$ Spell.Flashback+castKeyword | Description$ Flashback");
-
-            if (keyword.contains(":")) { // K:Flashback:Cost:ExtraParams:ExtraDescription
-                final String[] k = keyword.split(":");
-                final Cost cost = new Cost(k[1], false);
-                sb.append(cost.isOnlyManaCost() ? " " : "—").append(cost.toSimpleString());
-                sb.append(cost.isOnlyManaCost() ? "" : ".");
-
-                String extraDesc =  k.length > 3 ? k[3] : "";
-                if (!extraDesc.isEmpty()) { // extra params added in GameActionUtil, desc added here
-                    sb.append(cost.isOnlyManaCost() ? ". " : " ").append(extraDesc);
-                }
+        } else if (keyword.startsWith("Beam me up") || keyword.startsWith("Flashback")
+                || keyword.startsWith("Harmonize")) {
+            // all three read "cast this from your graveyard for <cost>, then exile this spell",
+            // so they differ only in the name shown and the property the stack check matches on
+            final String kwName;
+            final String saProperty;
+            if (keyword.startsWith("Beam me up")) {
+                kwName = "Beam me up";
+                saProperty = "BeamMeUp";
+            } else if (keyword.startsWith("Flashback")) {
+                kwName = "Flashback";
+                saProperty = "Flashback";
+            } else {
+                kwName = "Harmonize";
+                saProperty = "Harmonize";
             }
 
-            sb.append(" (").append(inst.getReminderText()).append(")");
-
-            String repeffstr = sb.toString();
-
-            String abExile = "DB$ ChangeZone | Defined$ Self | Origin$ Stack | Destination$ Exile";
-
-            SpellAbility saExile = AbilityFactory.getAbility(abExile, card);
-
-            if (!intrinsic) {
-                saExile.setIntrinsic(false);
-            }
-
-            ReplacementEffect re = ReplacementHandler.parseReplacement(repeffstr, host, intrinsic, card);
-
-            re.setOverridingAbility(saExile);
-
-            inst.addReplacement(re);
-        } else if (keyword.startsWith("Harmonize")) {
             StringBuilder sb = new StringBuilder();
             sb.append("Event$ Moved | ValidCard$ Card.Self | Origin$ Stack | ExcludeDestination$ Exile ");
-            sb.append("| ValidStackSa$ Spell.Harmonize+castKeyword | Description$ Harmonize");
+            sb.append("| ValidStackSa$ Spell.").append(saProperty).append("+castKeyword");
+            sb.append(" | Description$ ").append(kwName);
 
-            if (keyword.contains(":")) {
+            if (keyword.contains(":")) { // K:<keyword>:Cost:ExtraParams:ExtraDescription
                 final String[] k = keyword.split(":");
                 final Cost cost = new Cost(k[1], false);
                 sb.append(cost.isOnlyManaCost() ? " " : "—").append(cost.toSimpleString());
@@ -2421,6 +2358,20 @@ public class CardFactoryUtil {
             String sVarMadness = "DB$ ChangeZone | Hidden$ True | Origin$ All | Destination$ Exile | Defined$ ReplacedCard";
 
             re.setOverridingAbility(AbilityFactory.getAbility(sVarMadness, card));
+
+            inst.addReplacement(re);
+        } else if (keyword.startsWith("Megamorph")) {
+            String repeffStr =  "Event$ TurnFaceUp | ValidCard$ Card.Self | ValidCause$ SpellAbility.SameKeyword | Decription$ Megamorph";
+            String counterStr = "DB$ PutCounter | CounterType$ P1P1 | CounterNum$ 1";
+            SpellAbility countersSA = AbilityFactory.getAbility(counterStr, card);
+
+            if (!intrinsic) {
+                countersSA.setIntrinsic(false);
+            }
+
+            ReplacementEffect re = ReplacementHandler.parseReplacement(repeffStr, host, intrinsic, card);
+
+            re.setOverridingAbility(countersSA);
 
             inst.addReplacement(re);
         } else if (keyword.startsWith("Modular") && inst instanceof Modular modular) {
@@ -2551,7 +2502,7 @@ public class CardFactoryUtil {
             String repeffstr = "Event$ Destroy | ActiveZones$ Battlefield | ValidCard$ Card.EnchantedBy | Secondary$ True"
                     + " | Description$ Umbra armor (" + inst.getReminderText() + ")";
 
-            String abprevDamage = "DB$ DealDamage | Defined$ ReplacedCard | Remove$ All";
+            String abprevDamage = "DB$ HealDamage | Defined$ ReplacedCard";
             String abdestroy = "DB$ Destroy | Defined$ Self";
 
             SpellAbility sa = AbilityFactory.getAbility(abprevDamage, card);
@@ -2629,7 +2580,7 @@ public class CardFactoryUtil {
             }
         }
         else if (keyword.startsWith("Protection")) {
-            String validSource = getProtectionValid(keyword, true);
+            String validSource = Protection.getProtectionValid(keyword, true);
 
             String rep = "Event$ DamageDone | Prevent$ True | ActiveZones$ Battlefield | ValidTarget$ Card.Self";
             if (!validSource.isEmpty()) {
@@ -2780,6 +2731,16 @@ public class CardFactoryUtil {
             final SpellAbility sa = AbilityFactory.getAbility(sbClass.toString(), card);
             sa.setIntrinsic(intrinsic);
             inst.addSpellAbility(sa);
+        } else if (inst instanceof Craft craft) {
+            // Create return transformed ability string
+            String ab = "AB$ ChangeZone | CostDesc$ " + craft.getTitle() + " | Cost$ Exile<1/CARDNAME> " + craft.getCostString() + " | " +
+                    "Origin$ Exile | Destination$ Battlefield | Transformed$ True | Defined$ CorrectedSelf | " +
+                    "XAnnounceTitle$ " + Localizer.getInstance().getMessage("lblCraft") + " | " +
+                    "SorcerySpeed$ True | StackDescription$ Return this card transformed under its owner's control. " +
+                    "(Craft) | SpellDescription$ (" + inst.getReminderText() + ")";
+            final SpellAbility newSA = AbilityFactory.getAbility(ab, card);
+            newSA.setIntrinsic(intrinsic);
+            inst.addSpellAbility(newSA);
         } else if (keyword.startsWith("Dash")) {
             final String[] k = keyword.split(":");
             final Cost dashCost = new Cost(k[1], false);
@@ -2800,14 +2761,15 @@ public class CardFactoryUtil {
             newSA.setAlternativeCost(AlternativeCost.Dash);
             newSA.setIntrinsic(intrinsic);
             inst.addSpellAbility(newSA);
-        } else if (keyword.startsWith("Disguise")) {
+        } else if (keyword.startsWith("Disguise") && inst instanceof KeywordWithCost withCost) {
             final String[] k = keyword.split(":");
             final String reduceCost = k.length > 2 ? k[2] : null;
 
             SpellAbility faceDown = abilityCastFaceDown(card, intrinsic, "Disguise");
             faceDown.putParam("FaceDownKeyword", "Ward:2");
 
-            SpellAbility faceUp = abilityDisguiseUp(card, k[1], intrinsic);
+            SpellAbility faceUp = abilityTurnFaceUp(card, withCost.getCost(), "DisguiseUp", "Disguise", "disguise");
+            faceUp.setIntrinsic(intrinsic);
             if (reduceCost != null) {
                 faceUp.putParam("ReduceCost", reduceCost);
                 faceUp.setSVar(reduceCost, card.getSVar(reduceCost));
@@ -2843,7 +2805,7 @@ public class CardFactoryUtil {
             newSA.getRestrictions().setZone(ZoneType.Graveyard);
             newSA.setIntrinsic(intrinsic);
             inst.addSpellAbility(newSA);
-        } else if (keyword.startsWith("Emerge") && inst instanceof Emerge emerge) {
+        } else if (inst instanceof Emerge emerge) {
             String desc = "(" + emerge.getTitleWithoutCost()  + ")";
 
             final SpellAbility sa = card.getFirstSpellAbilityWithFallback();
@@ -2874,7 +2836,7 @@ public class CardFactoryUtil {
             // Epic does modify existing SA, and does not add new one
 
             // Add the Epic effect as a subAbility
-            String dbStr = "DB$ Effect | Triggers$ EpicTrigger | StaticAbilities$ EpicCantBeCast | Duration$ Permanent | Epic$ True";
+            String dbStr = "DB$ Effect | Triggers$ EpicTrigger | StaticAbilities$ EpicCantBeCast | Duration$ Permanent | ConditionDefined$ Self | ConditionPresent$ Card.hasKeywordEpic";
 
             final AbilitySub newSA = (AbilitySub) AbilityFactory.getAbility(dbStr, card);
 
@@ -2887,58 +2849,6 @@ public class CardFactoryUtil {
 
             // append to original SA
             origSA.appendSubAbility(newSA);
-        } else if (keyword.startsWith("Craft")) {
-            if (!keyword.contains(":")) {
-                System.err.println("Malformed Craft entry! - Card: " + card.toString());
-                return;
-            }
-            String[] k = keyword.split(":");
-
-            final StringBuilder cd = new StringBuilder();
-            cd.append(k[0]).append(" with ");
-            final Cost kCost = new Cost(k[1], true);
-            boolean plural = false;
-            if (k[1].contains("XMin")) {
-                String cutString = k[1].substring(k[1].indexOf("XMin") + 4);
-                int number = Integer.parseInt(cutString.substring(0, cutString.indexOf(" ")));
-                cd.append(Lang.getNumeral(number)).append(" or more ");
-                plural = true;
-            }
-            if (k.length > 2) {
-                cd.append(k[2].isEmpty() ? "" : k[2] + " ");
-            } else for (CostPart part : kCost.getCostParts()) {
-                if (part instanceof CostExile) {
-                    String amount = part.getAmount();
-                    if (StringUtils.isNumeric(amount)) {
-                        int amt = Integer.parseInt(amount);
-                        if (amt > 1) {
-                            cd.append(Lang.getNumeral(amt)).append(" ");
-                            plural = true;
-                        }
-                    }
-                    String partType = part.getType();
-                    //consume .Other from most partTypes
-                    if (partType.contains(".Other")) partType = partType.replace(".Other", "");
-                    String singNoun = part.getTypeDescription() != null ? part.getTypeDescription() :
-                            CardType.CoreType.isValidEnum(partType) ? partType.toLowerCase() : partType;
-                    if (singNoun.equalsIgnoreCase("Permanent")) break;
-                    String plurNoun = !singNoun.contains(" ") ? Lang.getPlural(singNoun) : singNoun;
-
-                    cd.append(plural ? plurNoun : singNoun).append(" ");
-                    break; // more complicated Craft costs should probably just use k[2] above
-                }
-            }
-            cd.append(kCost.getCostMana() != null ? kCost.getCostMana().toString() : "no mana?");
-
-            // Create return transformed ability string
-            String ab = "AB$ ChangeZone | CostDesc$ " + cd.toString() + " | Cost$ Exile<1/CARDNAME> " + k[1] + " | " +
-                    "Origin$ Exile | Destination$ Battlefield | Transformed$ True | Defined$ CorrectedSelf | " +
-                    "XAnnounceTitle$ " + Localizer.getInstance().getMessage("lblCraft") + " | " +
-                    "SorcerySpeed$ True | StackDescription$ Return this card transformed under its owner's control. " +
-                    "(Craft) | SpellDescription$ (" + inst.getReminderText() + ")";
-            final SpellAbility newSA = AbilityFactory.getAbility(ab, card);
-            newSA.setIntrinsic(intrinsic);
-            inst.addSpellAbility(newSA);
         } else if (keyword.startsWith("Equip")) {
             if (!keyword.contains(":")) {
                 System.err.println("Malformed Equip entry! - Card: " + card.toString());
@@ -3018,10 +2928,7 @@ public class CardFactoryUtil {
             } else {
                 sb.append(" ");
             }
-            // don't use SimpleString there because it does has "and" between cost i don't want that
-            costStr = cost.toString();
-            // but now it has ": " at the end i want to remove
-            sb.append("| CostDesc$ ").append(costStr, 0, costStr.length() - 2);
+            sb.append("| CostDesc$ ").append(cost);
             if (!cost.isOnlyManaCost()) {
                 sb.append(".");
             }
@@ -3209,16 +3116,16 @@ public class CardFactoryUtil {
             final SpellAbility sa = AbilityFactory.getAbility(sb.toString(), card);
             sa.setIntrinsic(intrinsic);
             inst.addSpellAbility(sa);
-        } else if (keyword.startsWith("Morph")) {
-            final String[] k = keyword.split(":");
-
+        } else if (keyword.startsWith("Morph") && inst instanceof KeywordWithCost withCost) {
             inst.addSpellAbility(abilityCastFaceDown(card, intrinsic, "Morph"));
-            inst.addSpellAbility(abilityMorphUp(card, k[1], false, intrinsic));
-        } else if (keyword.startsWith("Megamorph")) {
-            final String[] k = keyword.split(":");
-
+            SpellAbility morphUp = abilityTurnFaceUp(card, withCost.getCost(), "MorphUp", "Morph", "morph");
+            morphUp.setIntrinsic(intrinsic);
+            inst.addSpellAbility(morphUp);
+        } else if (keyword.startsWith("Megamorph") && inst instanceof KeywordWithCost withCost) {
             inst.addSpellAbility(abilityCastFaceDown(card, intrinsic, "Morph"));
-            inst.addSpellAbility(abilityMorphUp(card, k[1], true, intrinsic));
+            SpellAbility morphUp = abilityTurnFaceUp(card, withCost.getCost(), "MorphUp", "Megamorph", "morph");
+            morphUp.setIntrinsic(intrinsic);
+            inst.addSpellAbility(morphUp);
         } else if (keyword.startsWith("More Than Meets the Eye")) {
             final String[] n = keyword.split(":");
             final Cost convertCost = new Cost(n[1], false);
@@ -3228,6 +3135,7 @@ public class CardFactoryUtil {
             sa.setCardState(host.getAlternateState());
             sa.setAlternativeCost(AlternativeCost.MTMtE);
 
+            sa.putParam("Secondary", "True");
             sa.putParam("PrecostDesc", n[0] + " ");
             sa.putParam("CostDesc", convertCost.toString());
             sa.putParam("AfterDescription", "(Converted)");
@@ -3350,6 +3258,23 @@ public class CardFactoryUtil {
             newSA.setIntrinsic(intrinsic);
             newSA.setAlternativeCost(AlternativeCost.Overload);
             inst.addSpellAbility(newSA);
+        } else if (keyword.equals("Paradigm")) {
+            // Add the Paradigm effect as a subAbility
+            String abExile = "DB$ ChangeZone | Defined$ Self | Origin$ Stack | Destination$ Exile";
+            final AbilitySub saExile = (AbilitySub) AbilityFactory.getAbility(abExile, card);
+
+            String dbStr = "DB$ Effect | Triggers$ ParadigmTrigger | Duration$ Permanent | Unique$ True | Name$ " + card.getName() + "' Paradigm";
+            final AbilitySub newSA = (AbilitySub) AbilityFactory.getAbility(dbStr, card);
+
+            newSA.setSVar("ParadigmTrigger", "Mode$ Phase | Phase$ Main1 | ValidPlayer$ You | OptionalDecider$ You | Execute$ ParadigmCopy | TriggerDescription$ Paradigm (" + inst.getReminderText() + ")");
+            newSA.setSVar("ParadigmCopy", "DB$ Play | Defined$ EffectSource | ValidSA$ Spell | ZoneRegardless$ True | WithoutManaCost$ True | Optional$ True | CopyCard$ True");
+
+            saExile.setSubAbility(newSA);
+
+            final SpellAbility origSA = card.getFirstSpellAbility();
+
+            // append to original SA
+            origSA.appendSubAbility(saExile);
         } else if (keyword.startsWith("Plot")) {
             final String[] k = keyword.split(":");
             final String manacost = k[1];
@@ -3536,8 +3461,9 @@ public class CardFactoryUtil {
             newSA.setStackDescription(sb.toString());
             newSA.putParam("Secondary", "True");
             newSA.setAlternativeCost(AlternativeCost.Sneak);
-            newSA.setIntrinsic(intrinsic);
             newSA.getRestrictions().setInstantSpeed(true);
+
+            newSA.setIntrinsic(intrinsic);
             inst.addSpellAbility(newSA);
         } else if (keyword.startsWith("Station")) {
             String effect = "AB$ PutCounter | Cost$ tapXType<1/Creature.Other> | Defined$ Self " +
@@ -3654,7 +3580,7 @@ public class CardFactoryUtil {
                     int counters = AbilityUtils.calculateAmount(c, k[1], this);
                     GameEntityCounterTable table = new GameEntityCounterTable();
                     c.addCounter(CounterEnumType.TIME, counters, getActivatingPlayer(), table);
-                    table.replaceCounterEffect(game, this, false); // this is a special Action, not an Effect
+                    table.replaceCounterEffect(game, this); // this is a special Action, not an Effect
 
                     String sb = TextUtil.concatWithSpace(getActivatingPlayer().toString(),"has suspended", c.getDisplayName(), "with", String.valueOf(counters),"time counters on it.");
                     game.fireEvent(new GameEventAddLog(GameLogEntryType.STACK_RESOLVE, sb));
@@ -3823,23 +3749,12 @@ public class CardFactoryUtil {
     public static void addStaticAbility(final KeywordInterface inst, final CardState state, final boolean intrinsic) {
         String keyword = inst.getOriginal();
 
-        if (keyword.startsWith("Affinity")) {
-            final String[] k = keyword.split(":");
-            final String t = k[1];
-
-            String desc;
-            if (k.length > 2) {
-                String typeText = k[2];
-                if (typeText.contains(" with "))
-                    desc = typeText.substring(typeText.indexOf(" with ") + 6);
-                else
-                    desc = typeText + "s";
-            } else
-                desc = CardType.getPluralType(t);
+        if (inst instanceof Affinity affinity) {
+            final String t = affinity.getValidType();
 
             StringBuilder sb = new StringBuilder();
             sb.append("Mode$ ReduceCost | ValidCard$ Card.Self | Type$ Spell | Amount$ AffinityX | EffectZone$ All");
-            sb.append("| Description$ Affinity for ").append(desc);
+            sb.append("| Description$ ").append(affinity.getTitle());
             sb.append(" (").append(inst.getReminderText()).append(")");
             String effect = sb.toString();
 
@@ -4025,12 +3940,9 @@ public class CardFactoryUtil {
             String effect = "Mode$ CantBlockBy | ValidAttacker$ Creature.Self | ValidBlocker$ Creature.nonArtifact+!SharesColorWith | Secondary$ True " +
                     " | Description$ Intimidate (" + inst.getReminderText() + ")";
             inst.addStaticAbility(StaticAbility.create(effect, state.getCard(), state, intrinsic));
-        } else if (keyword.startsWith("Landwalk")) {
-            final String[] k = keyword.split(":");
-            String valid = k[1];
-            String desc = k[k.length > 2 ? 2 : 1].toLowerCase(Locale.ROOT);
-            String effect = "Mode$ CantBlockBy | ValidAttacker$ Creature.Self | ValidDefender$ Player.controls" + valid +
-                    " | Description$ " + StringUtils.capitalize(desc) + "walk (" + inst.getReminderText() + ")";
+        } else if (inst instanceof Landwalk landwalk) {
+            String effect = "Mode$ CantBlockBy | ValidAttacker$ Creature.Self | ValidDefender$ Player.controls" + landwalk.getValidType() +
+                    " | Description$ " + landwalk.getTitle() + " (" + inst.getReminderText() + ")";
             inst.addStaticAbility(StaticAbility.create(effect, state.getCard(), state, intrinsic));
         } else if (keyword.equals("Living metal")) {
             String effect = "Mode$ Continuous | Affected$ Card.Self | AddType$ Creature | Condition$ PlayerTurn | Secondary$ True";
@@ -4039,7 +3951,7 @@ public class CardFactoryUtil {
             String effect = "Mode$ CantTransform | ValidCard$ Creature.Self | ExceptCause$ SpellAbility.Nightbound | Secondary$ True | Description$ This permanent can't be transformed except by its nightbound ability.";
             inst.addStaticAbility(StaticAbility.create(effect, state.getCard(), state, intrinsic));
         } else if (keyword.startsWith("Protection")) {
-            String valid = getProtectionValid(keyword, false);
+            String valid = Protection.getProtectionValid(keyword, false);
 
             // Block
             String effect = "Mode$ CantBlockBy | ValidAttacker$ Creature.Self | Secondary$ True ";
@@ -4163,12 +4075,12 @@ public class CardFactoryUtil {
 
         SpellAbility saExile = AbilityFactory.getAbility(abExile, card);
 
-        String abEffect = "DB$ Effect | RememberObjects$ Self | StaticAbilities$ Play | ForgetOnMoved$ Exile | Duration$ Permanent | ConditionDefined$ Self | ConditionPresent$ Card.!copiedSpell+!token";
+        String abEffect = "DB$ Effect | RememberObjects$ Self | StaticAbilities$ Play | ForgetOnMoved$ Exile | Duration$ Permanent | ConditionDefined$ Self | ConditionPresent$ Card.!copiedSpell+!token | Adventure$ True";
         AbilitySub saEffect = (AbilitySub)AbilityFactory.getAbility(abEffect, card);
 
         StringBuilder sbPlay = new StringBuilder();
         sbPlay.append("Mode$ Continuous | MayPlay$ True | EffectZone$ Command | Affected$ Card.IsRemembered+!Adventure");
-        sbPlay.append(" | AffectedZone$ Exile | Description$ You may cast the card.");
+        sbPlay.append(" | AffectedZone$ Exile | Description$ You may cast EFFECTSOURCE.");
         saEffect.setSVar("Play", sbPlay.toString());
 
         saExile.setSubAbility(saEffect);
